# tigr-asgi-contracts

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  VERSION  package-lock.json  package.json  pyproject.toml
.codex/: AGENTS.md
.ssot/: registry.json
contract/: automata.yaml  bindings.yaml  capabilities.yaml  channels.yaml  checksums.txt  compatibility.yaml  completion.yaml  directions.yaml  event_classification.yaml  exchanges.yaml  extensions.yaml  families.yaml  frames.yaml  framing.yaml  ids.yaml  manifest.json  protocols.yaml  scope_types.yaml  subevents.yaml  surfaces.yaml
docs/: conformance.md  contract-governance.md  lifespan_subevent_matrix.csv  lifespan_subevent_matrix.md  publishing.md  receive-event-outline.md  scope-taxonomy-outline.md  scope_family_subevent_matrix.csv  scope_family_subevent_matrix.md  scope_family_subevent_transport_event_matrix.csv  scope_family_subevent_transport_event_matrix.md  scope_family_subevent_transport_event_permutation_matrix.csv  send-event-outline.md  subevent_scope_matrix.csv  subevent_scope_matrix.md  versioning.md
generators/: common.py
reports/: deduped_gap_feature_matrix.csv  deduped_gap_feature_matrix.md  frame_event_payload_schema_design_gap_matrix.csv  frame_event_payload_schema_design_gap_matrix.md  framing_multiplex_matrix.xlsx  master_feature_matrix.xlsx  normalized_master_feature_matrix.xlsx  proposed_schema_matrix.csv  proposed_schema_matrix.md  transport_adjacency_matrix.csv  transport_adjacency_matrix.md  uniform_contract_gap_matrix.csv  uniform_contract_gap_matrix.md  (+4 more)
(+273 files in other folders)
