[project]
name = "tigr-contract-workspace"
version = "0.1.0"
description = "Workspace tooling for the tigr contract repository"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "jsonschema>=4.23",
  "pytest>=8.3",
  "build>=1.2",
  "tomli>=2.0; python_version < '3.11'",
  "ssot-registry>=0.2.10",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "packages/contract-py/src",
  "packages/artifacts-py/src",
]
testpaths = ["tests"]
